@@ -26,12 +26,11 @@ import java.util.Locale;
 import java.util.TreeMap;
 
 /**
- * A simple class that allows localization of an application. As this class follows the singleton
- * design pattern, the localization mechanism can be easily accessed from every location of the
- * application's source without the need of passing references through constructors.
+ * A simple class that allows localization of an application.
  * <p>
  * The localized strings must be contained in files or subfolders of a root localization folder
- * {@link #getLocaleRoot()} which may be changed via {@link #setLocaleRoot(File)}.
+ * {@link #getLocaleRoot()}. This folder defaults to “i18n” and can be changed via
+ * {@link #setLocaleRoot(File)}.
  * <p>
  * In the root localization folder this class either expects files named after the corresponding
  * locale like {@code de_DE} or {@code en_US} (as returned by {@link Locale#toString()} or likewise
@@ -39,45 +38,58 @@ import java.util.TreeMap;
  * If it finds folders it reads the localized strings from every file (no matter which name)
  * contained in the specific folder.
  * <p>
- * Every line in a file that has been detected to contain localized strings as described above that
- * does not start with the character “#” and that contains the character “=“ is considered a
- * definition. A definition consists of a unique keyword that is used in source code to identify the
- * string, the character “=” and the localized version of the string. As the character “=” is used
- * as a separator of keys and values here it must not be contained in any key.
+ * Every line in a file that has been detected to contain localized strings that does not start with
+ * the character “#” and that contains the character “=“ is considered a definition. A definition
+ * consists of a unique keyword that is used in source code to identify the string, the character
+ * “=” and the localized version of the string. As the character “=” is used as a separator of keys
+ * and values here it must not be contained in any key.
  * <p>
  * The strings in the localization file are not trimmed when read from the file as it may happen
  * that some string needs a prepended or appended whitespace. Thus the “=” character should be
  * directly between the keys and values (like in “key=value”, NOT like in “key = value”).
+ * <p>
+ * This class does no longer follow the singleton design pattern because now an enum is used to
+ * identify the translatable strings. To give easy access to the localized strings in a client
+ * program it may however be useful to encapsulate a Localizor instance that is parametrized with a
+ * specific enum type in a singleton class.
  * 
  * @author Edgar Kalkowski
  */
-public class Localizor {
-    
-    /** The one and only instance of the {@code Localizor}. */
-    private static Localizor instance;
+public class Localizor<E extends Enum<E>> {
     
     /** The mapping of keys to localized strings. */
     private TreeMap<String, String> map = new TreeMap<String, String>();
     
-    /** The root folder that contains the localized files (or subfolders containing the files). */
-    private static File localeRoot = new File("locale").getAbsoluteFile();
-    
     /**
-     * The private constructor to conform to the singleton pattern.
+     * Create a new Localizor.
      * 
      * @param locale
-     *        The locale to load.
+     *        The desired locale to load.
      * @throws LocalizationException
      *         if no mapping file or folder for the requested locale could be found.
      */
-    private Localizor(Locale locale) throws LocalizationException {
-        File file = new File(localeRoot.toString() + File.separator + locale.toString());
+    public Localizor(Locale locale) {
+        this(locale, new File("i18n"));
+    }
+    
+    /**
+     * Create a new Localizor.
+     * 
+     * @param locale
+     *        The locale to load.
+     * @param localeRoot
+     *        The root directory which shall be searched for files/folders with translations in it.
+     * @throws LocalizationException
+     *         if no mapping file or folder for the requested locale could be found.
+     */
+    public Localizor(Locale locale, File localeRoot) throws LocalizationException {
+        File file = new File(localeRoot.getAbsolutePath() + File.separator + locale.toString());
         
         if (file.exists()) {
             readFile(file);
         } else {
             throw new LocalizationException("The locale “" + locale.toString()
-                    + "” is not defined for this program!");
+                    + "” is not defined in " + localeRoot.getAbsolutePath() + "!");
         }
     }
     
@@ -130,53 +142,11 @@ public class Localizor {
     }
     
     /**
-     * This method may be used to check if a mapping file for a specific locale file exists for this
-     * program.
-     * 
-     * @param locale
-     *        The {@link Locale} to check.
-     * @return {@code true} if a mapping file or folder for the requested locale exists.<br /> {@code
-     *         false} otherwise.
-     */
-    public static boolean isValidLocale(Locale locale) {
-        
-        if (localeRoot.isDirectory() && contains(localeRoot.list(), locale)) {
-            return true;
-        } else {
-            return false;
-        }
-    }
-    
-    /**
-     * Checks whether an array of file names (e.g. as obtained via {@link File#list()}) contains a
-     * file or folder that matches the delivered locale (i.e. equals {@link Locale#toString()} for
-     * the given {@code Locale}).
-     * 
-     * @param files
-     *        The array of file names to check.
-     * @param locale
-     *        The locale to search for.
-     * @return {@code true} if the delivered list of file names contains a file or folder equal to
-     *         {@code locale.toString()}, <br /> {@code false} otherwise.
-     */
-    private static boolean contains(String[] files, Locale locale) {
-        
-        for (String file : files) {
-            
-            if (file.equals(locale.toString())) {
-                return true;
-            }
-        }
-        
-        return false;
-    }
-    
-    /**
      * Parses the locale in string representation (like “de_DE”) into an instance of {@link Locale}.
      * 
      * @param locale
      *        The locale in string representation (for example as submitted via the command line).
-     * @return A {@link Locale} representing {@code locale}.
+     * @return An instance of {@link Locale} representing the given {@code locale}.
      * @throws IllegalArgumentException
      *         if the delivered string could not be parsed into a locale.
      */
@@ -201,7 +171,7 @@ public class Localizor {
     
     /**
      * Get the traslation for a string. The translation may contain several variabled denoted by
-     * {$0}, {$1} and so on. The strings submitted via this method's {@code params} parameter will
+     * {$0}, {$1} and so on. The strings submitted via this method’s {@code params} parameter will
      * be inserted at these positions. {$0} will be substituted by {@code params[0]} and so on.
      * 
      * @param id
@@ -210,95 +180,13 @@ public class Localizor {
      *        Values for the parameters to be inserted into the translated string.
      * @return The translated string with all parameters inserted.
      */
-    public String get(String id, String... params) {
-        String string = map.get(id);
+    public String get(E id, String... params) {
+        String string = map.get(id.toString());
         
         for (int i = 0; i < params.length && id != null && string != null; i++) {
             string = string.replaceAll("\\{\\$" + i + "\\}", params[i]);
         }
         
-        return string == null ? "<BROKEN TRANSLATION FOR KEY “" + id + "” in “" + localeRoot + "”>"
-                : string;
-    }
-    
-    /**
-     * @return An instance of {@code File} that denotes the currently used root directory for
-     *         localization files and/or folders.
-     */
-    public static File getLocaleRoot() {
-        return localeRoot;
-    }
-    
-    /**
-     * Change the root folder in which is looked for localization files and/or folders. This method
-     * only checks if the abstract path denoted by {@code folder} exists and is a folder. It does
-     * not check if it contains any localization files and/or folders and it does not reload the
-     * currently used locale.
-     * <p>
-     * So if you change the localization root folder via this method it's best to do so before
-     * {@link #getInstance()} is called for the first time in your program. Otherwise all previous
-     * calls will use strings from the old location and may fail if there are no localized strings
-     * at the old location. Instead you may call {@link #newInstance(Locale)} with the desired
-     * {@code Locale} after changing the localization root folder which will cause a reload of all
-     * localized strings.
-     * 
-     * @param folder
-     *        The new folder to use.
-     */
-    public static void setLocaleRoot(File folder) {
-        localeRoot = folder;
-    }
-    
-    /**
-     * Loads a new locale.
-     * 
-     * @param locale
-     *        The new locale to load.
-     * @return A reference to the new {@code Localizor} object representing the new locale.
-     * @throws LocalizationException
-     *         If no mapping file could be found for the requested locale. Please make sure before
-     *         calling this method with a locale as parameter that a mapping file exists via the
-     *         {@link Localizor#isValidLocale(Locale)} method.
-     */
-    public static Localizor newInstance(Locale locale) throws LocalizationException {
-        instance = new Localizor(locale);
-        return instance;
-    }
-    
-    /**
-     * Loads the default locale as returned by {@link Locale#getDefault()}.
-     * 
-     * @return A reference to the new {@code Localizor} object representing the default locale.
-     * @throws LocalizationException
-     *         If no mapping file or folder for the default locale could be found. Please make sure
-     *         such a file exists by asserting that {@code
-     *         isValidLocale(java.util.Locale.getDefault())} returns {@code true} before calling
-     *         this method.
-     */
-    public static Localizor newInstance() throws LocalizationException {
-        instance = new Localizor(Locale.getDefault());
-        return instance;
-    }
-    
-    /**
-     * Returns the current {@code Localizor} instance or creates a new one if no such instance
-     * exists so far. If no instance exists so far the default locale as returned by
-     * {@link Locale#getDefault()} is used.
-     * 
-     * @return A reference to the new {@code Localizor} object representing the current locale.
-     * @throws LocalizationException
-     *         if no mapping file or folder for the default locale could be found and no other
-     *         locale was loaded so far. Please make sure that the default locale is valid by
-     *         asserting that {@link #isValidLocale(Locale)} returns {@code true} for the parameter
-     *         {@link Locale#getDefault()} or load a different locale via
-     *         {@link #newInstance(Locale)} before calling this method.
-     */
-    public static Localizor getInstance() throws LocalizationException {
-        
-        if (instance == null) {
-            instance = new Localizor(Locale.getDefault());
-        }
-        
-        return instance;
+        return string == null ? "»" + id + "«" : string;
     }
 }
