@@ -3,6 +3,7 @@
   that is based on JFreeChart.
 – Rework configuration api. Now arbitrary (serializable) Java objects can be stored either
   directly as serialized Java objects or xml encoded via the XStream library.
+– Identify localized strings via enum constants and not via strings any more.
 
 0.0.3
 – Command line parser can now handle list of files at the end.
